# django_orm

./: .gitignore  .gitlab-ci.yml  README.md  dc_up.bat  docker-compose.yml  gen_data.bat  main.py  makemigration.bat  migrate.bat  pyproject.toml  readme copy.md  start.bat  start_celery.bat  start_ruff.bat  start_test.bat  start_test.sh
.github/workflows/: tests.yml
config/: .env.Example  celery.py  config.py  settings.py  urls.py
store_app/: admin.py  apps.py  forms.py  loguru_config.py  models.py  tasks.py  urls.py
store_app/management/commands/: gen_data.py
store_app/migrations/: 0001_initial.py
store_app/repository/: product_repository.py
store_app/templates/: about.html  base.html  category_add.html  index.html  product_add.html  product_delete.html  product_detail.html  product_edit.html
store_app/templates/include/: menu.html
store_app/tests/: conftest.py  test_celery.py  test_forms.py  test_models.py  test_templates.py  test_views.py
store_app/view/: __init__.py  category.py  main_views.py  product.py
